--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -13,3 +13,37 @@
 /* Stop purging. */
 
 /* Your own custom utilities */
+
+.box{
+    position: absolute;
+    left: calc(50% - 690px/2);
+    top: calc(50% - 600px/2 - 25.5px);
+    background: #FFFFFF;
+    box-shadow: 0px 30px 60px -30px rgba(0, 0, 0, 0.25), 0px 50px 100px -20px rgba(50, 50, 93, 0.25);
+    border-radius: 20px;
+}
+.box-part1{
+    /* Auto Layout */
+
+padding: 24px;
+
+width: 690px;
+height: 600px;
+
+
+background: #FFFFFF;
+border-radius: 20px 20px 0px 0px;
+
+}
+
+.box-part2{
+    /* Footer */
+
+
+width: 690px;
+height: 51px;
+
+
+background: #FFFFFF;
+border-radius: 0px 0px 20px 20px;
+}
