--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -47,3 +47,12 @@ height: 51px;
 background: #FFFFFF;
 border-radius: 0px 0px 20px 20px;
 }
+.cursor {
+    z-index: 9999;
+    mix-blend-mode: difference;
+    transition-property:  opacity, background-color, transform, mix-blend-mode;
+}
+  html, body {
+    cursor: none;
+    overflow: hidden;
+}
